Add version number to CableDiscoveryData

Advertisement packet for ChromeOS and Linux includes version number to
be included in the first byte of the service data.

Bug: 846536
Change-Id: I56aa419b0f3fb5c56e29c776175a16ce8c9c0c55
Reviewed-on: https://chromium-review.googlesource.com/1072963
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Tim Song <tengs@chromium.org>
Reviewed-by: Balazs Engedy <engedy@chromium.org>
Commit-Queue: Jun Choi <hongjunchoi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563368}
Former-commit-id: 4d2965a507ec86a20b302f924d440024841769d5